[project]
name = "wankotools"
dynamic = ["version"]
license = "MIT"
authors = [{ name = "odrling", email = "florianbadie@odrling.xyz" }]
requires-python = ">=3.11"
dependencies = ["aiofiles", "backoff", "httpx", "minio", "pydantic", "typer"]

[project.scripts]
wankosync = "wankotools.sync:wankosync"
wankofonts = "wankotools.fonts:wankofonts"

[project.urls]
homepage = "https://github.com/Japan7/wankotools"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM", "I"]
